<resources>
    <string name="app_name">ChatProjet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="clear">clear</string>
    <string name="submit">submit</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="wrong_password" />
    <string name="register">register</string>
    <string name="Send">Send</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="PROFILE">PROFILE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="nickname">nickname</string>
    <string name="email">email</string>
    <string name="userpicture">user picture</string>
    <string name="save">save</string>
    <string name="new_password">new password</string>
    <string name="search_user_s_profile">search user\'s profile</string>
    <string name="sign_in">sign in</string>
    <string name="log_in">log in</string>
    <string name="search_profile_by_username">SEARCH PROFILE BY USERNAME</string>
    <string name="user_picture">user picture</string>
    <string name="search_icon">search icon</string>
    <string name="back_to_chat">back to chat</string>
    <string name="user_image">user image</string>
    <string name="register_click">click here to register</string>
    <string name="i_m_already_registered">I\'m already registered</string>
</resources>
