<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chted.chatprojet.SearchProfileActivity">

    <TextView
        android:id="@+id/header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_profile_by_username"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>


        <LinearLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/header1"
            android:padding="20dp">



            <EditText
                android:id="@+id/search_user_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/search_user_btn"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/search_icon"
                android:src="@android:drawable/ic_menu_search" />



        </LinearLayout>

    <ScrollView
        android:id="@+id/content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <TextView
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""/>

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""/>

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/user_image" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/backbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/back_to_chat" />




    </LinearLayout>


</RelativeLayout>

